# Osselbot

./: .gitignore  .npmrc  .replit  Cargo.toml  Dockerfile  README.md  analysis_options.yaml  build.sh  jest.config.js  npm-shrinkwrap.json  package-lock.json  package.json  pubspec.yaml  quotes.json
.github/workflows/: dockerimage2.yml  dockerpub.yml  dockerpub2.yml  dockerpub3.yml
docs/: index.md
lib/: config.dart
old stuff/: bot-start.sh  old.js  shard.js
src/: bot-start.sh  bot.bat  bot.js  config.json  credentials.json  google.json  index.js  main.rs  osselbot.service  rewrite.js
